force-app/hfs-backend/main/default/objects/hfs_Download__c/hfs_Download__c.object-meta.xml
<CustomObject>
    <description>Download-event log backing the Downloads This Month tile (HFS-32). One record per asset download by a partner; the tile counts the signed-in partner&apos;s own records in the current calendar month. This story reads only.</description>
    <label>Download</label>
    <nameField>
        <displayFormat>DL-{00000}</displayFormat>
        <label>Download Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Downloads</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>