force-app/hfs-backend/main/default/objects/hfs_Download__c/fields/hfs_Account__c.field-meta.xml
<CustomField>
    <fullName>hfs_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner account that performed the download. Scopes downloads to the partner.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Downloads</relationshipLabel>
    <relationshipName>HFS_Downloads</relationshipName>
    <type>Lookup</type>
</CustomField>