force-app/hfs-backend/main/default/objects/hfs_Download__c/fields/hfs_Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>hfs_Asset_Name__c</fullName>
    <label>Asset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>