force-app/hfs-backend/main/default/objects/hfs_Download__c/fields/hfs_Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>hfs_Asset_Type__c</fullName>
    <description>Drives supporting detail (e.g. &quot;Logo files: 4 · Templates: 5&quot;).</description>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Logo</fullName>
            </value>
            <value>
                <fullName>Template</fullName>
            </value>
            <value>
                <fullName>Doc</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>