force-app/hfs-backend/main/default/objects/hfs_Download__c/fields/hfs_Download_Date__c.field-meta.xml
<CustomField>
    <fullName>hfs_Download_Date__c</fullName>
    <description>Timestamp of the download. Current-month filter uses this field.</description>
    <label>Download Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>