force-app/hfs-backend/main/default/objects/hfs_Download__c/fields/hfs_Downloaded_By__c.field-meta.xml
<CustomField>
    <fullName>hfs_Downloaded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who downloaded the asset.</description>
    <label>Downloaded By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Downloads (Downloaded By)</relationshipLabel>
    <relationshipName>HFS_Downloaded</relationshipName>
    <type>Lookup</type>
</CustomField>